# glmnet

./: ChangeLog  DESCRIPTION  INDEX  MD5  NAMESPACE  NEWS.md  README.md  cleanup  configure  configure.in  configure.win
R/: Cindex.R  RcppExports.R  assess.coxnet.R  assess.glmnet.R  auc.R  auc.mat.R  bigGlm.R  blend.relaxed.R  buildPredmat.array.R  buildPredmat.coxnetlist.R  buildPredmat.default.R  check.dots.R  check.exclude.R  check_dots.R  coef.cv.glmnet.R  coef.cv.relaxed.R  coef.glmnet.R  coef.relaxed.R  coefnorm.R  confusion.glmnet.R  coxgrad.R  coxnet.R  coxnet.deviance.R  coxpath.R  cv.coxnet.R  cv.elnet.R  cv.fishnet.R  cv.glmnet.R  cv.glmnet.raw.R  cv.glmnetfit.R  cv.lognet.R  cv.mrelnet.R  cv.multnet.R  cv.relaxed.raw.R  cvcompute.R  cvelnet.R  cvlognet.R  cvstats.R  cvtype.R  data.R  (+63 more)
inst/: CITATION  (+1 more)
src/glmnetpp/: BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  clean-build.sh  environment.yml  generate_bazelrc
src/glmnetpp/benchmark/: BUILD.bazel  CMakeLists.txt  binomial_benchmark.cpp  binomial_two_class_benchmark.cpp  gaussian_benchmark.cpp  gaussian_cov_benchmark.cpp  gaussian_naive_benchmark.cpp  poisson_benchmark.cpp
src/glmnetpp/benchmark/analyze/: analyze.py  analyze_binomial_benchmark.py  analyze_binomial_two_class_benchmark.py  analyze_gaussian_benchmark.py  path_names.py
src/glmnetpp/bug_reports/: 2022_11_07.cpp  BUILD.bazel
src/glmnetpp/bug_reports/data/: BUILD.bazel
src/glmnetpp/bug_reports/data/2022_11_07/: generate_data.R
src/glmnetpp/bug_reports/tools/: bazel_data_util.cpp  bazel_data_util.hpp
src/glmnetpp/docs/data/: binomial_benchmark.csv  binomial_two_class_benchmark.csv  gaussian_benchmark.csv
src/glmnetpp/docs/design/: README.md
src/glmnetpp/include/: glmnetpp
src/glmnetpp/include/glmnetpp_bits/: chkvars.hpp  elnet_driver.hpp  elnet_path.hpp  elnet_point.hpp  internal.hpp  standardize.hpp  wls.hpp
src/glmnetpp/include/glmnetpp_bits/elnet_driver/: base.hpp  binomial.hpp  decl.hpp  gaussian.hpp  poisson.hpp  standardize.hpp
src/glmnetpp/include/glmnetpp_bits/elnet_path/: base.hpp  binomial_base.hpp  binomial_multi_class.hpp  binomial_multi_class_group.hpp  binomial_two_class.hpp  decl.hpp  gaussian_base.hpp  gaussian_cov.hpp  gaussian_multi.hpp  gaussian_naive.hpp  poisson_base.hpp  poisson_naive.hpp  sp_binomial_multi_class.hpp  sp_binomial_multi_class_group.hpp  sp_binomial_two_class.hpp  sp_gaussian_cov.hpp  sp_gaussian_multi.hpp  sp_gaussian_naive.hpp  sp_poisson_naive.hpp
src/glmnetpp/include/glmnetpp_bits/elnet_point/: base.hpp  binomial_base.hpp  binomial_multi_class.hpp  binomial_multi_class_group.hpp  binomial_two_class.hpp  decl.hpp  gaussian_base.hpp  gaussian_cov.hpp  gaussian_multi.hpp  gaussian_naive.hpp  gaussian_wls.hpp  poisson_base.hpp  poisson_naive.hpp  sp_binomial_multi_class.hpp  sp_binomial_multi_class_group.hpp  sp_binomial_two_class.hpp  sp_gaussian_cov.hpp  sp_gaussian_multi.hpp  sp_gaussian_naive.hpp  sp_gaussian_wls.hpp  sp_poisson_naive.hpp  traits.hpp
src/glmnetpp/include/glmnetpp_bits/elnet_point/internal/: base.hpp  binomial_base.hpp  binomial_multi_class.hpp  binomial_multi_class_group.hpp  binomial_two_class.hpp  decl.hpp  gaussian_base.hpp  gaussian_cov.hpp  gaussian_multi.hpp  gaussian_naive.hpp  gaussian_wls.hpp  poisson_base.hpp  poisson_naive.hpp  sp_binomial_multi_class.hpp  sp_binomial_multi_class_group.hpp  sp_binomial_two_class.hpp  sp_gaussian_cov.hpp  sp_gaussian_multi.hpp  sp_gaussian_naive.hpp  sp_gaussian_wls.hpp  sp_poisson_naive.hpp
src/glmnetpp/include/glmnetpp_bits/util/: exceptions.hpp  functional.hpp  macros.hpp  type_traits.hpp  types.hpp
src/glmnetpp/include/glmnetpp_bits/util/iterator/: counting_iterator.hpp  one_to_zero_iterator.hpp
src/glmnetpp/src/: BUILD.bazel  CMakeLists.txt  internal.cpp
src/glmnetpp/src/legacy/: glmnet5dpclean.f  legacy.h  pb.c
src/glmnetpp/test/: BUILD.bazel  CMakeLists.txt  chkvars_unittest.cpp  internal_unittest.cpp  standardize_unittest.cpp  wls_unittest.cpp
src/glmnetpp/test/elnet_driver/: binomial_unittest.cpp  chkvars_unittest.cpp  gaussian_unittest.cpp  poisson_unittest.cpp  standardize_unittest.cpp
src/glmnetpp/test/elnet_path/: binomial_base.hpp  binomial_multi_class_group_unittest.cpp  binomial_multi_class_unittest.cpp  binomial_two_class_unittest.cpp  gaussian_base.hpp  gaussian_cov_unittest.cpp  gaussian_multi_unittest.cpp  gaussian_naive_unittest.cpp  poisson_naive_unittest.cpp  sp_binomial_multi_class_group_unittest.cpp  sp_binomial_multi_class_unittest.cpp  sp_binomial_two_class_unittest.cpp  sp_gaussian_cov_unittest.cpp  sp_gaussian_multi_unittest.cpp  sp_gaussian_naive_unittest.cpp  sp_poisson_naive_unittest.cpp
src/glmnetpp/test/elnet_point/: gaussian_wls_unittest.cpp  sp_gaussian_wls_unittest.cpp
src/glmnetpp/test/testutil/: base_fixture.hpp  data_util.hpp  internal.cpp  internal.hpp  mapped_sparse_matrix_wrapper.hpp  mock_pb.hpp  thread.hpp
src/glmnetpp/test/testutil/translation/: elnet.hpp  elnet1.hpp  elnet2.hpp  fishnet.hpp  fishnet1.hpp  lognet.hpp  lognet2n.hpp  lognetn.hpp  multelnet.hpp  multelnet2.hpp  multlognetn.hpp  multspelnet.hpp  multspelnet2.hpp  multsplognetn.hpp  spelnet.hpp  spelnet1.hpp  spelnet2.hpp  spfishnet.hpp  spfishnet1.hpp  splognet.hpp  splognet2n.hpp  splognetn.hpp  wls.hpp
src/glmnetpp/test/translation/: elnet1_unittest.cpp  elnet2_unittest.cpp  elnet_base_fixture.hpp  elnet_dscheck_unittest.cpp  elnet_unittest.cpp  fishnet1_unittest.cpp  fishnet_dscheck_unittest.cpp  fishnet_unittest.cpp  lognet2n_unittest.cpp  lognet_base_fixture.hpp  lognet_dscheck_unittest.cpp  lognet_unittest.cpp  lognetn_unittest.cpp  multelnet2_unittest.cpp  multelnet_dscheck_unittest.cpp  multelnet_unittest.cpp  multlognetn_unittest.cpp  multspelnet2_unittest.cpp  multspelnet_unittest.cpp  multsplognetn_unittest.cpp  spelnet1_unittest.cpp  spelnet2_unittest.cpp  spelnet_unittest.cpp  spfishnet1_unittest.cpp  spfishnet_unittest.cpp  splognet2n_unittest.cpp  splognet_unittest.cpp  splognetn_unittest.cpp  wls_dscheck_unittest.cpp  wls_unittest.cpp
src/glmnetpp/test/util/: type_traits_unittest.cpp
(+108 files in other folders)
