AC_INIT(DESCRIPTION)
AC_PREREQ(2.69)
## 
echo " This package requires a fortran 90 compiler. We assume"
echo " that your fortran 90 environment is set up appropriately."
echo " Reference: Section on 'Using F95 code' in R-exts manual."
echo " R_HOME is ${R_HOME}"

FC=`"${R_HOME}/bin/R" CMD config FC`

if test -z "${FC}"; then
  echo "R could not detect your Fortran 90 compiler in the documented"
  echo "   way, so we will attempt Fortran 90 compiler detection on our"
  echo "   own. NOTE:  All bets are off!"
  AC_PROG_FC()
fi

if test "x${FC}" != x; then
	FC=`basename "${FC}"`
fi

case "${FC}" in
    *g77*) 
      echo "  R configured for g77; hope it groks F90/95..."
      AC_SUBST(OUR_FCFLAGS, "-fdefault-real-8 -ffixed-form")
      ;;
    *gfortran*)
      echo "  R configured for gfortran..."
      AC_SUBST(OUR_FCFLAGS, "-fdefault-real-8 -ffixed-form")
      ;;
    ifort)
      echo "  R configured for Intel fortran..."
      AC_SUBST(OUR_FCFLAGS, "-O3 -axsse4.2 -r8 -fpp -fixed")
      ;;
    *)
      echo "    Unsupported Fortran 90 compiler or Fortran 90"
      echo "    compilers unavailable! Stop!"
      exit 1
      ;;
esac
AC_OUTPUT(src/Makevars)	
